src/test/ui/hrtb/issue-62203-hrtb-ice.stderr
error[E0271]: type mismatch resolving `for<'r> <[closure@$DIR/issue-62203-hrtb-ice.rs:41:17: 41:39] as FnOnce<((&'r u8,),)>>::Output == Unit3`
  --> $DIR/issue-62203-hrtb-ice.rs:38:19
   |
LL |     let v = Unit2.m(
   |                   ^ expected struct `Unit4`, found struct `Unit3`
   |
note: required because of the requirements on the impl of `for<'r> T0<'r, (&'r u8,)>` for `L<[closure@$DIR/issue-62203-hrtb-ice.rs:41:17: 41:39]>`
  --> $DIR/issue-62203-hrtb-ice.rs:17:16
   |
LL | impl<'a, A, T> T0<'a, A> for L<T>
   |                ^^^^^^^^^     ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
